# ifgf

./: .clang-format  CMakeLists.txt  Makefile  boundingbox.hpp  chebinterp.cpp  chebinterp.hpp  chebinterp_sycl.cpp  chebinterp_sycl.hpp  combined_field_helmholtz_ifgf.hpp  cone_domain.hpp  config.hpp  double_layer_helmholtz_ifgf.hpp  grad_helmholtz_ifgf.hpp  helmholtz_ifgf.hpp  ifgf_library.cpp  ifgf_library.hpp  ifgfoperator.hpp  laplace_ifgf.hpp  modified_helmholtz_ifgf.hpp  octree.hpp  py_ifgf.cpp  sycl_helpers.hpp  test_chebinterp.cpp  test_ifgf.cpp  unordered_dense.h  util.hpp
test/: plot_CQ.py  plot_CQIFGF.py  plot_CQWieghts.py  plot_cutOff.py  plot_errors.py  plot_interpolation.py  plot_target.py  test_CQIFGF.cpp  test_CQWeights.cpp  test_chebinterp.cpp  test_fact_osz.cpp  test_fact_std.cpp  test_ifgf.cpp
